syntax = "proto3";

package base.v1;

option go_package = "github.com/victor8titov/go-grpc-example/basepb/v1;basepb";


service Base {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}